--- a/Snippets/MainWindow.xaml
+++ b/Snippets/MainWindow.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
 
-        <ListView x:Name="snippetsListView" Grid.Row="1" SelectionMode="Single">
+        <ListView x:Name="snippetsListView" Grid.Row="1" SelectionMode="Single" SelectionChanged="ListViewItemSelected">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Margin="4">
