added option to add snippets (fixes #7)

--- a/Snippets/MainWindow.xaml
+++ b/Snippets/MainWindow.xaml
@@ -17,7 +17,11 @@
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
 
-        <Button Grid.Column="1" Content="Copy" Width="60" Click="CopyCodeToClipboard" Margin="2" />
+        <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="2" HorizontalAlignment="Center">
+            <Button Content="Copy" Width="60" Click="CopyCodeToClipboard" Margin="2" />
+            <Button Content="Add" Width="60" Click="ShowAddWindowClick" Margin="2" />
+        </StackPanel>
+        
 
         <ListView x:Name="snippetsListView" Grid.Row="1" SelectionMode="Single" SelectionChanged="ListViewItemSelected">
             <ListView.ItemTemplate>
