added code to center add window (fixes #8)

--- a/Snippets/Models/AddSnippetWindow.xaml
+++ b/Snippets/Models/AddSnippetWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Snippets.Models"
         mc:Ignorable="d"
-        Title="AddSnippetWindow" Height="400" Width="600">
+        Title="AddSnippetWindow" Height="400" Width="600"
+        WindowStartupLocation="CenterOwner">
     <Grid Margin="4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
