--- a/Snippets/MainWindow.xaml
+++ b/Snippets/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid Margin="4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
