--- a/Snippets/MainWindow.xaml
+++ b/Snippets/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Snippets"
         mc:Ignorable="d"
-        Title="Snippets" Height="450" Width="800">
+        Title="Snippets" Height="450" Width="800" Closing="SaveSnippetsOnClosing"
+        >
     <Grid Margin="4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
