--- a/Snippets/MainWindow.xaml
+++ b/Snippets/MainWindow.xaml
@@ -20,7 +20,21 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Margin="2" HorizontalAlignment="Center">
-            <TextBox Text="Search" Width="160" VerticalContentAlignment="Center" Padding="2" Margin="2" />
+            <Grid>
+                <TextBox x:Name="searchTxt" Width="160" VerticalContentAlignment="Center" Padding="2" Margin="2" />
+                <TextBox IsHitTestVisible="False" Width="160" Text="Search" VerticalContentAlignment="Center" Padding="2" Margin="2" Foreground="DarkGray" Background="Transparent" BorderBrush="Transparent">
+                    <TextBox.Style>
+                        <Style TargetType="{x:Type TextBox}">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Text, ElementName=searchTxt}" Value="">
+                                    <Setter Property="Visibility" Value="Visible"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBox.Style>
+                </TextBox>
+            </Grid>
             <Button Margin="2">
                 <StackPanel Orientation="Horizontal" Margin="2">
                     <iconPacks:PackIconBootstrapIcons Kind="Search" Margin="2" />
