--- a/Snippets/MainWindow.xaml
+++ b/Snippets/MainWindow.xaml
@@ -68,7 +68,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Margin="4">
-                        <TextBlock Text="{Binding Title}" />
+                        <TextBlock Text="{Binding Name}" />
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
