--- a/Snippets/MainWindow.xaml
+++ b/Snippets/MainWindow.xaml
@@ -9,6 +9,9 @@
         mc:Ignorable="d"
         Title="Snippets" Height="500" Width="800" Closing="SaveSnippetsOnClosing"
         >
+    <Window.Resources>
+        <models:EmptyStringToHiddenConverter x:Key="EmptyStringToHiddenConverter"/>
+    </Window.Resources>
     <Grid Margin="4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -93,7 +96,7 @@
             <TextBlock Text="Name: " Margin="2"/>
             <TextBlock Grid.Column="1" Text="{Binding Name}" Margin="2"/>
 
-            <TextBlock Grid.Row="1" Text="Description: " Margin="2"/>
+            <TextBlock Grid.Row="1" Text="Description: " Margin="2" Visibility="{Binding Description, Mode=OneWay, Converter={StaticResource EmptyStringToHiddenConverter}}"/>
             <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Description}" Margin="2"/>
 
             <TextBlock Grid.Row="2" Text="Used: " Margin="2"/>
