--- a/Snippets/MainWindow.xaml
+++ b/Snippets/MainWindow.xaml
@@ -25,7 +25,7 @@
 
         <StackPanel Orientation="Horizontal" Margin="2" HorizontalAlignment="Center">
             <Grid>
-                <TextBox x:Name="searchTxt" Width="160" VerticalContentAlignment="Center" Padding="2" Margin="2" />
+                <TextBox x:Name="searchTxt" Width="160" VerticalContentAlignment="Center" Padding="2" Margin="2" KeyDown="OnKeyDownHandler"/>
                 <TextBox IsHitTestVisible="False" Width="160" Text="Search" VerticalContentAlignment="Center" Padding="2" Margin="2" Foreground="DarkGray" Background="Transparent" BorderBrush="Transparent">
                     <TextBox.Style>
                         <Style TargetType="{x:Type TextBox}">
@@ -39,7 +39,7 @@
                     </TextBox.Style>
                 </TextBox>
             </Grid>
-            <Button Margin="2">
+            <Button Margin="2" Click="FindSnippetClick">
                 <StackPanel Orientation="Horizontal" Margin="2">
                     <iconPacks:PackIconBootstrapIcons Kind="Search" Margin="2" />
                 </StackPanel>
