--- a/Snippets/Models/SnippetWindow.xaml
+++ b/Snippets/Models/SnippetWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Snippets.Models.AddSnippetWindow"
+﻿<Window x:Class="Snippets.Models.SnippetWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -33,11 +33,20 @@
         <TextBox Grid.Column="1" Grid.Row="2" d:Text="Snippet prerequisites" Text="{Binding Prerequisites, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" AcceptsReturn="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Padding="2" Margin="2"/>
         <TextBox Grid.Column="1" Grid.Row="3" d:Text="Snippet code" Text="{Binding Code, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" AcceptsReturn="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Padding="2" Margin="2"/>
 
-        <Button Grid.Column="1" Grid.Row="4" Width="80" Click="AddSnippetClick" Margin="2">
-            <StackPanel Orientation="Horizontal" Margin="2">
-                <iconPacks:PackIconBootstrapIcons x:Name="submitIcon"  Kind="Braces" Margin="2" />
-                <TextBlock x:Name="submitTxt" Text="Add" Margin="2"/>
-            </StackPanel>
-        </Button>
+        <StackPanel Grid.Column="1" Grid.Row="4" Orientation="Horizontal" Margin="4" HorizontalAlignment="Center">
+            <Button Width="80" Margin="2" IsCancel="True">
+                <StackPanel Orientation="Horizontal" Margin="2">
+                    <iconPacks:PackIconBootstrapIcons Kind="X" Margin="2" />
+                    <TextBlock Text="Cancel" Margin="2"/>
+                </StackPanel>
+            </Button>
+            <Button Width="80" Click="AddSnippetClick" Margin="2" IsDefault="True">
+                <StackPanel Orientation="Horizontal" Margin="2">
+                    <iconPacks:PackIconBootstrapIcons x:Name="submitIcon" Kind="Braces" Margin="2" />
+                    <TextBlock x:Name="submitTxt" Text="Add" Margin="2"/>
+                </StackPanel>
+            </Button>
+        </StackPanel>
+        
     </Grid>
 </Window>
